Updated backend for the newer spring boot version(3.5.0).